projects/compiler/test/typechecker/match/error_alreadycovered_literal_after_type.1.out
Error at %FILE_NAME%:5:3
Unreachable match case
  |    1 => {}
       ^
The previous case(s) cover all possibilities for match target type 'Int'
