projects/compiler/test/typechecker/match/error_alreadycovered_literal_after_type.1.abra
val arr = [1, 2, 3]

match 123 {
  Int => {}
  1 => {}
  _ => {}
}